@@ -1,0 +1,3 @@
+package foo.bar;
+
+public class FooBar {}
