@@ -1,0 +1,3 @@
+open module foo.bar {
+  requires foo;
+}
