@@ -25,6 +25,8 @@ GitHub.
 * `StringUtils.nullSafeToString()` now returns `"null"` if the invocation of `toString()`
   on the supplied object returns `null`. Although this is an internal utility, the effect
   of this change may be witnessed by end users and test engine or extension authors.
+* Method `scanForClassesInPackage(String)` in `ClasspathScanner` now returns a valid list
+  of class names when the package name is equal to the name of a module on the module path.
 
 ==== Deprecations and Breaking Changes
 
